# sec_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
data/: ~$Modelo BD Cuestionarios_V1.xlsx
data/encuesta/: Modelo BD Cuestionarios_V1.xlsx
src/: main_ui.py
src/consulta/: Consulta_Azure.py  main_ui.py
src/consulta/pages/: 1_json_template.py  DBA_Assistant.py  Encuesta_seguridad_asearch.py  Leer_Archivo_de_Preguntas.py  answer_security_questions_ui.py
src/consulta/utils/: answer_security_questions.py
src/navegacion/: Busqueda.py  Carga_inicial.py  Explorar.py  Leer_Archivo_de_Preguntas.py  Nueva.py  azuresearch.py
src/seguridad_db/: populate_dba_rag.py  populate_seguridaddb.py  populate_seguridaddb_azure.py  test.py
src/shared/: get_embedding_function.py
src/utils/: get_embedding_function.py  log_settings.py
