[tool.poetry]
name = "encuesta-seguridad-ai"
version = "0.1.0"
description = ""
authors = ["juan <juanmegu@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
langchain = "^0.2.1"
chromadb = "^0.5.0"
langchain-community = "^0.2.1"
icecream = "^2.1.3"
openpyxl = "^3.1.2"
google-generativeai = "^0.5.4"
google-api-python-client = "^2.130.0"
langchain-google-genai = "^1.0.5"
huggingface-hub = "^0.23.1"
streamlit = "^1.35.0"
sentence-transformers = "^3.0.0"
langchain-chroma = "^0.1.1"
pypdf = "^4.2.0"
lark = "^1.1.9"
azure-search-documents = "^11.4.0"
azure-identity = "^1.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
